tests/ui/const-generics/mgca/generic_const_type_mismatch.stderr
error: type annotations needed for the literal
  --> $DIR/generic_const_type_mismatch.rs:17:22
   |
LL |     Foo::<T>{field : 1}
   |                      ^

error: aborting due to 1 previous error

